# from_tup_macro

./: Cargo.toml  README.md
src/: lib.rs
