[package]
name = "from_tup_macro"
version = "0.2.0"
authors = ["Karl Wulfert <pic16f877.ccs@emailn.de>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/pic16f877ccs/from_tup_macro"
homepage = "https://github.com/pic16f877ccs/from_tup_macro"
license = "MIT OR Apache-2.0"
description = "Library for implement from tuple trait"
keywords = ["trait", "no-std", "tuple-convert", "tuple-to-array"]
categories = ["rust-patterns"]

[lib]
name = "from_tup_macro"
proc-macro = true

[features]
from_tup_8 = []
from_tup_16 = []
from_tup_32 = []
from_tup_64 = []
